tests/snapshots/model_tests__channel_type_conversion.snap
---
source: tests/model_tests.rs
expression: results
---
- - Release
  - Release
- - Beta
  - Beta
- - Canary
  - Canary
- - RC
  - ReleaseCandidate
- - Patch
  - Patch
- - Unknown
  - Release
