tests/snapshots/model_tests__release_channels.snap
---
source: tests/model_tests.rs
expression: channel_strings
---
- Release
- Beta
- Canary
- ReleaseCandidate
- Patch
